established connection to mongoDB

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lacquer&display=swap" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    
     <title>Frame Rate</title>
   </head>
   <body>
